# biosphere-ai-lab-app

./: .gitignore  .taurignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  start.sh  vite.config.js
crates/biosphere-ai/: Cargo.toml
crates/biosphere-ai-lab/: Cargo.toml
crates/biosphere-ai-lab/src/: lib.rs
crates/biosphere-ai-lab/src/core/: config.rs  error.rs  event.rs  mod.rs  plugin.rs  session.rs
crates/biosphere-ai-lab/src/data/: accessor.rs  accessor_registry.rs  arrow_table.rs  augmentation.rs  bias_detection.rs  chat_template.rs  checkpoint.rs  cloud_streaming.rs  confident_learning.rs  connector.rs  connector_registry.rs  csv_accessor.rs  csv_loader.rs  curation.rs  dashboard.rs  data_collator.rs  data_loader.rs  data_recipe.rs  data_trait.rs  data_version.rs  dataset_recommender.rs  dedup.rs  discovery.rs  global_dedup.rs  global_shuffle.rs  hf_hub.rs  http_connector.rs  influence.rs  interleave.rs  json_loader.rs  label_quality.rs  lazy_loader.rs  lineage.rs  local_fs_connector.rs  mod.rs  monitor.rs  multimodal.rs  packing.rs  parquet_loader.rs  pipeline.rs  (+13 more)
crates/biosphere-ai-lab/src/data/analysis/: correlation.rs  drift.rs  imbalance.rs  kfold.rs  mod.rs  row_diff.rs  safety.rs
crates/biosphere-ai-lab/src/domain/: command_bus.rs  mod.rs
crates/biosphere-ai-lab/src/domain/dataset/: aggregate.rs  handler.rs  mod.rs  quality.rs  repository.rs
crates/biosphere-ai-lab/src/domain/experiment/: aggregate.rs  commands.rs  events.rs  handler.rs  metrics.rs  mod.rs  repository.rs
crates/biosphere-ai-lab/src/domain/hardware/: mod.rs  monitor.rs  service.rs
crates/biosphere-ai-lab/src/engine/: burn_engine.rs  burn_training.rs  engine_trait.rs  mod.rs  registry.rs
crates/biosphere-ai-lab/src/gateway/: commands.rs  events.rs  init.rs  mod.rs  state.rs  tauri_adapter.rs
crates/biosphere-ai-lab/src/hardware/: mod.rs
crates/biosphere-ai-lab/src/infrastructure/: config.rs  logging.rs  mod.rs
crates/biosphere-ai-lab/src/model/: layers.rs  mod.rs  model_trait.rs  registry.rs
crates/biosphere-ai-lab/src/remote/: mod.rs  remote_trait.rs
crates/biosphere-ai-lab/src/task/: classification.rs  mod.rs  registry.rs  task_trait.rs
crates/biosphere-ai-lab/src/training/: manager.rs  metrics.rs  mod.rs
crates/biosphere-ai-lab/src/types/: id.rs  mod.rs  status.rs  tensor.rs
crates/biosphere-ai/docs/: DATA_STORAGE_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  TECHNICAL_DESIGN.md  第一步.md  警告.txt
crates/biosphere-ai/src/: lib.rs  prelude.rs
crates/biosphere-ai/src/image_analysis/: color.rs  gradient.rs  mod.rs  region.rs  traits.rs
crates/biosphere-ai/src/types/: color.rs  gradient.rs  mod.rs  region.rs
docs/: doc.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/infrastructure/: config.rs  logging.rs  mod.rs
(+229 files in other folders)
