[package]
name = "biosphere-ai-lab-app"
version = "0.1.0"
description = "Biosphere AI Lab - 模型训练可视化平台"
authors = ["you"]
edition = "2021"

[lib]
name = "biosphere_ai_lab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
biosphere-ai-lab = { path = "../crates/biosphere-ai-lab" }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }

[features]
default = []
tch-engine = ["biosphere-ai-lab/tch-engine"]
