[package]
name = "biosphere-ai-lab"
version.workspace = true
edition.workspace = true

[dependencies]
burn = { version = "0.20", features = ["std", "wgpu", "fusion", "train", "vision", "ndarray"], default-features = false }
tch = { version = "0.22", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "process"] }
tracing = "0.1"
async-trait = "0.1"
csv = "1"
parquet = "55"
arrow = "55"
sysinfo = "0.33"
rusqlite = { version = "0.37", features = ["bundled"] }
dirs = "6"
crc32fast = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = { version = "0.8", features = ["std_rng"] }
tokenizers = "0.21"
regex = "1"
lazy_static = "1"
flate2 = "1"
zstd = "0.13"

tauri = { version = "2", optional = true }

[features]
default = ["std", "tauri"]
std = []
tch-engine = ["tch"]
