[package]
name = "biosphere-ai"
version.workspace = true
edition.workspace = true

[dependencies]

# Burn ML Framework - 核心依赖
burn = { version = "0.20", features = ["std", "wgpu", "fusion"], default-features = false }

# Parallel computing
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

[features]
default = ["std"]
std = []
